# tag_prompt

./: LICENSE  __init__.py  node.py  package.json  pyproject.toml  tsconfig.json  vite.config.ts
src/: constants.ts  editor.module.css  editor.ts  editorWorker.ts  editor_old.ts  header.ts  highlight.ts  index.ts  lineno.ts  suggestion.ts  tags.ts  utils.ts
src/assets/: editor.module.css
web/assets/: editorWorker.js  index.css
web/js/: index.js
